tests/fixtures/valid/app/valid-helper.php
<?php

echo config('app.valid_key');
