tests/fixtures/invalid/app/invalid-nested-helper.php
<?php

use Illuminate\Support\Facades\Config;

echo config('app.nested.invalid_key');
